# altshop

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.local  FINAL_DEPENDENCY_STATUS.md  INSTALLED_DEPENDENCIES.md  LICENSE  Makefile  README.md  README.ru_RU.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  mypy-wave1.ini  mypy-wave2.ini  pyproject.toml  requirements.txt  test_plans_docker.py  test_promocodes.py  test_promocodes_docker.py
.github/: release-template.md
.github/assets/: social-preview.html
.github/workflows/: beta-images.yml  ci.yml  dev-docker-release.yml  release.yml
admin_panel/: .env.example  .gitignore  INSTALL.md  Makefile  README.md  docker-compose.panel.yml  docker-compose.standalone.yml  nginx.conf  package.json  turbo.json
admin_panel/nginx/: nginx.conf
docs/: 01-project-overview.md  02-architecture.md  03-services.md  04-database.md  05-api.md  06-bot-dialogs.md  07-payment-gateways.md  08-configuration.md  09-deployment.md  10-development.md  11-execution-intelligence.md  API_CONTRACT.md  BACKEND_OPERATOR_GUIDE.md  BOT_WEB_PARITY_IMPLEMENTATION.md  DOCUMENTATION_UPDATE_ACT.md  DOCUMENTATION_UPDATE_REPORT.md  EVENT_COVERAGE_MATRIX.md  OPENAPI_GENERATION_SETUP.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROMOCODE_E2E_AUDIT.md  QUICK_START_API.md  README.md  SERVICE_INTEGRATION_GUIDE.md  SERVICE_INTEGRATION_STATUS.md  TROUBLESHOOTING.md  WEB_APP_NGINX_SETUP.md  WEB_APP_SETUP.md  backend-followup-2026-03-06.md  dependency-security-exceptions.md  optimization-plan-2026-03-06.md  project-audit-2026-03-06.md  project-audit-2026-04-12.md  refactor-followup-2026-03-07.md  remnawave-compatibility.md  wave3-lint-burndown-2026-03-06.md
docs/tech/: 01-executive-summary.md  02-backend-audit.md  03-frontend-audit.md  (+4 more)
nginx/: Dockerfile  docker-compose.yml  nginx.conf
scripts/: backend_audit_report.py  bootstrap-prod-vps.sh  build_release_notes.py  generate-api.sh  generate_execution_intelligence_snapshot.py  verify_operator_docs.py  write_docker_smoke_env.py
src/: __main__.py  lifespan.py
tests/: conftest.py  test_analytics_auth.py  test_app_factory.py  test_backend_audit_report.py  test_backup_process_record_data.py  test_bot_config.py  test_branding.py  test_cloudpayments_gateway.py  test_cryptomus_gateway.py  test_cryptopay_gateway.py  test_docker_bootstrap.py  test_heleket_gateway.py  test_importer_assign_plan_all.py  test_invited_access.py  test_legacy_auth_compat.py  test_mini_app_config.py  test_mulenpay_gateway.py  test_pal24_gateway.py  test_partner_earning.py  test_partner_portal_service.py  test_payment_gateway_succeeded.py  test_payment_webhook_event.py  test_payments_webhook_endpoint.py  test_plan_catalog_service.py  test_platega_gateway.py  test_promocode_activate_plan_filter.py  test_promocode_apply_reward.py  test_purchase_quantity.py  test_purchase_subscription_task.py  test_redis_pattern_invalidation.py  test_referral_link_fallback.py  test_referral_portal_service.py  test_remnawave_sync_events.py  test_remnawave_webhook.py  test_request_ip.py  test_robokassa_gateway.py  test_stripe_gateway.py  test_subscription_device_service.py  test_subscription_portal_service.py  test_subscription_runtime.py  (+24 more)
web-app/: .gitignore  AUTH_SYSTEM.md  FIX_SUMMARY.md  LANDING_PAGE.md  README.md  eslint.config.js  index.html  openapi-ts.config.json  package-lock.json  package.json  react-doctor.config.json  tsconfig.json  vite.config.ts
(+753 files in other folders)
