[project]
name = "altshop"
version = "1.2.21"
description = "Telegram bot, FastAPI API, and React web app for selling VPN subscriptions with Remnawave integration"
authors = [{ name = "dizzzable" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "aiogram~=3.27.0",
    "aiogram-dialog~=2.6.0",
    "alembic~=1.18.4",
    "asyncpg~=0.31.0",
    "dishka~=1.9.1",
    "fastapi>=0.135.3",
    "fluentogram~=1.2.1",
    "greenlet>=3.4.0",
    "httpx>=0.27.2,<0.28.0",
    "loguru~=0.7.3",
    "msgspec~=0.21.0",
    "pydantic>=2.11.0,<2.12.0",
    "pydantic-settings~=2.13.1",
    "redis~=7.4.0",
    "remnawave==2.7.1",
    "taskiq~=0.12.1",
    "taskiq-redis~=1.2.2",
    "uvicorn>=0.44.0",
    "cryptography>=46.0.7",
    "bcrypt>=5.0.0",
    "sqlalchemy[mypy]>=2.0.49",
    "qrcode[pil]>=8.2",
    "python-jose[cryptography]>=3.5.0",
    "aiofiles>=25.1.0",
    "pillow>=12.2.0",
]

[project.urls]
homepage = "https://github.com/dizzzable/altshop"
repository = "https://github.com/dizzzable/altshop"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.10",
    "pytest>=9.0.3",
    "watchfiles>=1.1.1",
    "ftl-extract>=0.10.0",
    "types-cachetools",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    "venv",
    ".venv",
    ".idea",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "web-app/node_modules",
    "web-app/dist",
]

[tool.ruff.lint]
select = [
    "C",
    "DTZ",
    "E",
    "F",
    "I",
    "ICN",
    "N",
    "PLC",
    "PLE",
    "Q",
    "T",
    "W",
    "YTT",
]
ignore = ["N805"]
[tool.ruff.lint.per-file-ignores]
"src/infrastructure/database/migrations/versions/0023_add_currency_and_gateway_types.py" = ["E501"]
"src/infrastructure/database/migrations/versions/0025_add_partner_settings_column.py" = ["E501"]
"src/infrastructure/database/migrations/versions/0026_add_partner_individual_settings.py" = ["E501"]
"src/infrastructure/database/migrations/versions/0034_add_branding_settings.py" = ["E501"]

[tool.mypy]
packages = ["src"]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
exclude = ["venv", ".venv", ".idea", "tests"]
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["fluentogram.*", "remnawave.*", "qrcode.*", "jose.*", "aiofiles.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["src.bot.routers.*", "src.infrastructure.payment_gateways.*"]
strict_optional = false
warn_return_any = false
disable_error_code = ["union-attr", "arg-type", "assignment", "call-overload", "no-untyped-call"]

[[tool.mypy.overrides]]
module = ["src.services.backup", "src.services.partner", "src.infrastructure.taskiq.tasks.*"]
disable_error_code = ["call-overload", "unused-ignore"]

[[tool.mypy.overrides]]
module = [
    "src.api.endpoints.*",
    "src.bot.middlewares.*",
    "src.infrastructure.taskiq.middlewares",
    "src.lifespan",
    "src.services.access",
    "src.services.payment_gateway",
    "src.services.referral",
    "src.services.remnawave",
]
disable_error_code = ["call-overload"]
